* Added a talk prompt to Jeanne. She can teach you magic (except that the jobs are not implemented yet).
* Implemented the level 2 magic jobs: Mage, Mystic and Healer. You can get them both through Magnus and Jeanne.
* Implemented Miranda date sex:
 - PC dom, PC fucks vag.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3h4
-------------
* Broken Magnus is fixed. Again.
* Fixed a logical inconsistency in the game flow. Gwendy and Maria can no longer be encountered before you've met Miranda for the first time (talked to her at the gates of Rigard for the first time).

Version 0.3h3
-------------
* Broken Magnus is fixed.
* Bug in golem combat fixed.
* Fixed some minor typos/parser errors in Gwendy.

Version 0.3h2
-------------
* Fixed a bug in Magnus where he would show the wrong text when prompted for sex.
* Added stretching your capacity to Magnus' scenes. Quite a lot.
* Fixed a bug I introduced in the Gwendy loss prompt.
* Changed the named of the Gwendy Kiss scenes for clarification (since you can get both in the same menu now)

Version 0.3h
------------
* Fixed a massive myriad of miscellaneous misspellings and mistakes.
* Fera should now be able to take your second cock if your first one is too big.
* Danie got the same treatment.
* New cats loss scene (PC fucks pussy).
* Ravens. There is a rather extensive scene forshadowing future events, accessible through your dreams. It takes a rather long time to trigger. Written by Del.
* Poked a bit at the GUI. The button texts should be more readable now.
* New Gwendy sequence, that will allow you to enter Rigard (talk with her about it, and be sure to be an early bird). Oneshot for the moment, but it is planned to be repeatable.
* Gwendy now got repeatable sex stuff while in the loft (need to unlock the scenes by working first).
* Magnus sex scene added. Not for everyone.

Version 0.3g
------------
* Fixed minor bug in drake AI