@@ -23,6 +23,7 @@ CreditsScreen = function() {
 	Text.AddOutput("Rosalin cock worship scene: Fenoxo<br/>");
 	Text.AddOutput("Dreams & ravens: About half of them, Del<br/>");
 	Text.AddOutput("Cats loss scenes: LukaDoc and QuietBrowser<br/>");
+	Text.AddOutput("Some of Miranda's sex scenes: LukaDoc and QuietBrowser<br/>");
 	
 	Text.Newline();
 	
