@@ -14,6 +14,7 @@ Version 0.3i
 * Implemented the level 2 magic jobs: Mage, Mystic and Healer. You can get them both through Magnus and Jeanne.
 * Implemented Miranda date sex:
  - PC dom, PC fucks vag.
+ - PC dom, PC fucks ass. Written together with LD/QB.
 
 --------------------------------------------
              PREVIOUS VERSIONS
